rollbacked my change, this flag already exists. Just added an ignore button to the FilesChangedDialog
git-svn-id: svn+ssh://svn.code.sf.net/p/jedit/svn/jEdit/trunk@8190 6b1eeb88-9816-0410-afa2-b43733a0f04e